# multimodal_rag_with_clip

./: .gitignore  README.md  main.ipynb  pyproject.toml  requirements.txt
scripts/: run_rag.py
src/clip_multimodal_rag/: __init__.py  cli.py  config.py  embeddings.py  pdf_processor.py  pipeline.py  retrieval.py
